--- a/packages/pixel_ui/src/configs/backend.config.json
+++ b/packages/pixel_ui/src/configs/backend.config.json
@@ -1,6 +1,7 @@
 {
   "host_local": "localhost",
-  "host": "https://backend-pixel.onrender.com/",
+  "host_p": "https://backend-pixel.onrender.com/",
+  "host": "http://localhost:8081",
   "port": 8082,
   "scripts": {
     "place_pixel_devnet": "../tests/integration/local/place_pixel.sh",
