pump state and transfer + fix pixel backend

--- a/apps/website/.env.example
+++ b/apps/website/.env.example
@@ -6,4 +6,10 @@ NETWORK_NAME="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
 
 PINATA_API_KEY="YOUR_PINATA_API_KEY"
 PINATA_SECRET_API_KEY="YOUR_PINATA_SECRET_API_KEY"
-IPFS_GATEWAT="https://your.ipfs.gateway.url/ipfs"
+IPFS_GATEWAY="https://ipfs.io/"
+
+REACT_APP_BACKEND_URL=
+REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
+REACT_APP_CANVAS_NFT_CONTRACT_ADDRESS=
+REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
+REACT_APP_NODE_ENV=
