--- a/packages/pixel_ui/src/configs/backend.config.json
+++ b/packages/pixel_ui/src/configs/backend.config.json
@@ -1,7 +1,7 @@
 {
   "host_local": "localhost",
-  "host_p": "https://backend-pixel.onrender.com/",
-  "host": "http://localhost:8081",
+  "host": "backend-pixel.onrender.com/",
+  "host_p": "localhost",
   "port": 8082,
   "scripts": {
     "place_pixel_devnet": "../tests/integration/local/place_pixel.sh",
@@ -9,7 +9,7 @@
     "add_template_devnet": "../tests/integration/local/add_template.sh",
     "mint_nft_devnet": "../tests/integration/local/mint_nft.sh"
   },
-  "production": true,
+  "production": false,
   "websocket": {
     "read_buffer_size": 1024,
     "write_buffer_size": 1024
