--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "onchain/solidity_contracts/lib/kakarot-lib"]
 	path = onchain/solidity_contracts/lib/kakarot-lib
 	url = https://github.com/kkrt-labs/kakarot-lib
+[submodule "onchain/solidity_contracts/lib/openzeppelin-contracts-upgradeable"]
+	path = onchain/solidity_contracts/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "onchain/solidity_contracts/lib/openzeppelin-contracts"]
+	path = onchain/solidity_contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
