--- a/apps/indexer/docker-compose.yml
+++ b/apps/indexer/docker-compose.yml
@@ -17,8 +17,9 @@ services:
   unruggableMemecoin-deploy-indexer:
     environment:
       - AUTH_TOKEN=${AUTH_TOKEN}
+      - DATABASE_CONN_STRING=${DATABASE_CONN_STRING}
     image: quay.io/apibara/sink-postgres:latest
-    command: 'run ./indexer/unruggableMemecoin-deploy.indexer.ts --connection-string postgresql://admin:password@postgres:5432/indexer -A ${AUTH_TOKEN}'
+    command: 'run ./indexer/unruggableMemecoin-deploy.indexer.ts --allow-env-from-env AUTH_TOKEN,DATABASE_CONN_STRING -A ${AUTH_TOKEN}'
     volumes:
       - ./src:/indexer
     depends_on:
@@ -27,31 +28,31 @@ services:
       - backend
     restart: on-failure
 
-  unruggableMemecoin-launch-indexer:
-    environment:
-      - AUTH_TOKEN=${AUTH_TOKEN}
-    image: quay.io/apibara/sink-postgres:latest
-    command: 'run ./indexer/unruggableMemecoin-launch.indexer.ts --connection-string postgresql://admin:password@postgres:5432/indexer -A ${AUTH_TOKEN}'
-    volumes:
-      - ./src:/indexer
-    depends_on:
-      - postgres
-    networks:
-      - backend
-    restart: on-failure
+  # unruggableMemecoin-launch-indexer:
+  #   environment:
+  #     - AUTH_TOKEN=${AUTH_TOKEN}
+  #   image: quay.io/apibara/sink-postgres:latest
+  #   command: 'run ./indexer/unruggableMemecoin-launch.indexer.js --connection-string postgresql://admin:password@postgres:5432/indexer -A ${AUTH_TOKEN}'
+  #   volumes:
+  #     - ./src:/indexer
+  #   depends_on:
+  #     - postgres
+  #   networks:
+  #     - backend
+  #   restart: on-failure
 
-  unruggableMemecoin-transfers-indexer:
-    environment:
-      - AUTH_TOKEN=${AUTH_TOKEN}
-    image: quay.io/apibara/sink-postgres:latest
-    command: 'run ./indexer/unruggableMemecoin-transfers.indexer.ts --connection-string postgresql://admin:password@postgres:5432/indexer -A ${AUTH_TOKEN}'
-    volumes:
-      - ./src:/indexer
-    depends_on:
-      - postgres
-    networks:
-      - backend
-    restart: on-failure
+  # unruggableMemecoin-transfers-indexer:
+  #   environment:
+  #     - AUTH_TOKEN=${AUTH_TOKEN}
+  #   image: quay.io/apibara/sink-postgres:latest
+  #   command: 'run ./indexer/unruggableMemecoin-transfers.indexer.js --connection-string postgresql://admin:password@postgres:5432/indexer -A ${AUTH_TOKEN}'
+  #   volumes:
+  #     - ./src:/indexer
+  #   depends_on:
+  #     - postgres
+  #   networks:
+  #     - backend
+  #   restart: on-failure
 
 networks:
   backend:
