--- a/apps/indexer/Dockerfile
+++ b/apps/indexer/Dockerfile
@@ -11,4 +11,8 @@ FROM quay.io/apibara/sink-postgres:0.7.0-x86_64
 WORKDIR /app
 COPY ./src/* /app
 
+ARG DATABASE_CONN_STRING
+
+ENV DATABASE_CONN_STRING=${DATABASE_CONN_STRING}
+
 ENTRYPOINT ["/nix/store/rh1g8pb7wfnyr527jfmkkc5lm3sa1f0l-apibara-sink-postgres-0.7.0/bin/apibara-sink-postgres"]
