--- a/turbo.json
+++ b/turbo.json
@@ -21,8 +21,8 @@
     "TG_ADMIN_CHAT_ID",
     "TELEGRAM_MOBILE_APP",
     "EXPO_PUBLIC_PIXEL_URL",
-    "REACT_APP_BACKEND_URL",
-    "REACT_APP_NODE_ENV"
+    "NEXT_PUBLIC_BACKEND_URL",
+    "NEXT_PUBLIC_NODE_ENV"
   ],
   "pipeline": {
     "build": {
@@ -47,8 +47,8 @@
         "INDEXER_DATABASE_URL",
         "TELEGRAM_MOBILE_APP",
         "EXPO_PUBLIC_PIXEL_URL",
-            "REACT_APP_BACKEND_URL",
-    "REACT_APP_NODE_ENV"
+        "NEXT_PUBLIC_BACKEND_URL",
+        "NEXT_PUBLIC_NODE_ENV"
       ]
     },
     "run": {
@@ -63,8 +63,8 @@
         "APP_URL",
         "NEXT_PUBLIC_WALLET_CONNECT_ID",
         "EXPO_PUBLIC_PIXEL_URL",
-        "REACT_APP_BACKEND_URL",
-        "REACT_APP_NODE_ENV"
+        "NEXT_PUBLIC_BACKEND_URL",
+        "NEXT_PUBLIC_NODE_ENV"
       ]
     },
     "deploy": {
