--- a/onchain/package.json
+++ b/onchain/package.json
@@ -20,7 +20,8 @@
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "common":"workspace:*"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
