fix docker file indexer

--- a/apps/indexer/Dockerfile
+++ b/apps/indexer/Dockerfile
@@ -15,4 +15,28 @@ ARG POSTGRES_CONNECTION_STRING
 
 ENV POSTGRES_CONNECTION_STRING=${POSTGRES_CONNECTION_STRING}
 
+ARG PGAPPNAME
+
+ENV PGAPPNAME=${PGAPPNAME}
+
+ARG PGDATABASE
+
+ENV PGDATABASE=${PGDATABASE}
+
+ARG PGHOST
+
+ENV PGHOST=${PGHOST}
+
+ARG PGPASSWORD
+
+ENV PGPASSWORD=${PGPASSWORD}
+
+ARG PGPORT
+
+ENV PGPORT=${PGPORT}
+
+ARG PGUSER
+
+ENV PGUSER=${PGUSER}
+
 ENTRYPOINT ["/nix/store/rh1g8pb7wfnyr527jfmkkc5lm3sa1f0l-apibara-sink-postgres-0.7.0/bin/apibara-sink-postgres"]
