try fix test pump with felt

--- a/apps/indexer/Dockerfile
+++ b/apps/indexer/Dockerfile
@@ -39,4 +39,9 @@ ARG PGUSER
 
 ENV PGUSER=${PGUSER}
 
+
+ARG PGOPTIONS
+
+ENV PGOPTIONS=${PGOPTIONS}
+
 ENTRYPOINT ["/nix/store/rh1g8pb7wfnyr527jfmkkc5lm3sa1f0l-apibara-sink-postgres-0.7.0/bin/apibara-sink-postgres"]
