--- a/onchain/package.json
+++ b/onchain/package.json
@@ -21,6 +21,7 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0",
+    "nostr-tools": "^2.5.2",
     "common":"workspace:*"
   },
   "dependencies": {
