--- a/onchain/package.json
+++ b/onchain/package.json
@@ -21,12 +21,14 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0",
+    "nostr-tools": "^2.5.2",
     "common":"workspace:*"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "onchain": "link:",
     "solidity": "link:",
-    "starknet": "^6.11.0"
+    "starknet": "^6.6.6"
+
   }
 }
