--- a/onchain/package.json
+++ b/onchain/package.json
@@ -9,6 +9,10 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@typechain/ethers-v6": "^0.5.0",
+    "@uniswap/v2-core":"1.0.1",
+    "@uniswap/v2-periphery":"1.1.0-beta.0",
+    "@openzeppelin/contracts":"5.0.2",
+    "@openzeppelin/contracts-upgradeable":"5.0.2",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
