--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@babel/runtime": "^7.24.8",
     "@expo/metro-runtime": "~3.2.1",
+    "@getalby/bitcoin-connect-react": "^3.5.3",
+    "@getalby/lightning-tools": "^5.0.3",
+    "@getalby/sdk": "^3.6.1",
     "@noble/curves": "^1.4.0",
     "@nostr-dev-kit/ndk": "^2.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -40,9 +43,11 @@
     "@tanstack/react-query": "^5.40.0",
     "@uniswap/sdk-core": "^5.3.1",
     "@walletconnect/react-native-compat": "^2.13.3",
+    "@webbtc/webln-types": "^2.1.0",
     "afk_nostr_sdk": "workspace:*",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
+    "common": "workspace:*",
     "crypto-es": "^2.1.0",
     "events": "^3.3.0",
     "expo": "~51.0.17",
@@ -80,16 +85,11 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.10.5",
+    "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
-    "zustand": "^4.5.2",
-    "common":"workspace:*",
-    "@getalby/lightning-tools": "^5.0.3",
-    "@getalby/bitcoin-connect-react": "^3.5.3",
-    "@getalby/sdk": "^3.6.1",
-    "react-native-webview-crypto": "^0.0.25",
     "text-encoding": "^0.7.0",
-    "@webbtc/webln-types": "^2.1.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
