--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -15,15 +15,16 @@
     "check:all-strict": "yarn check && yarn format:check && yarn lint:strict && yarn ts:check"
   },
   "dependencies": {
-    "@nostr-dev-kit/ndk": "^2.8.2",
-    "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
+    "@cashu/cashu-ts": "^1.0.1",
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
-    "@scure/base": "1.1.5"
+    "@nostr-dev-kit/ndk": "^2.8.2",
+    "@scure/base": "1.1.5",
+    "@tanstack/react-query": "^5.40.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.8.2",
@@ -42,13 +43,10 @@
     }
   },
   "devDependencies": {
-    "@nostr-dev-kit/ndk": "^2.8.2",
-    "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@nostr-dev-kit/ndk": "^2.8.2",
+    "@tanstack/react-query": "^5.40.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
@@ -62,8 +60,11 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tsup": "^8.0.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "zustand": "^4.5.2"
   },
   "private": true
 }
