--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.8",
+    "@cashu/cashu-ts": "^1.0.1",
     "@expo/metro-runtime": "~3.2.1",
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
