--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": [
-      "dom",
-      "esnext",
-    ],
+    "lib": ["dom", "esnext"],
     "module": "CommonJS",
     "moduleResolution": "Node",
     "allowJs": true,
@@ -16,12 +13,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "declaration": true
+    "declaration": true,
+    "strictNullChecks": true
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
+  "exclude": ["node_modules", "dist"],
   "include": [
     "src/**/*.graphql",
     "src/**/*",
@@ -34,11 +29,7 @@
     "**/*.jsx"
   ],
   "paths": {
-    "indexer-prisma": [
-      "packages/indexer-prisma/src"
-    ],
-    "common": [
-      "packages/common/src"
-    ]
-  },
+    "indexer-prisma": ["packages/indexer-prisma/src"],
+    "common": ["packages/common/src"]
+  }
 }
