--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -2,7 +2,6 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "dev": "next dev",
     "start": "next start",
@@ -10,40 +9,42 @@
     "build": "next build",
     "build:nostr_sdk": "cd ../.. && pnpm run build:nostr_sdk",
     "lint": "next lint",
-    "lint:fix":"next lint --fix",
-    "prettier:fix":"pnpm prettier --write 'src/**/*.tsx'",
-    "prettier:fix:ts":"pnpm prettier --write 'src/**/*.ts'",
+    "lint:fix": "next lint --fix",
+    "prettier:fix": "pnpm prettier --write 'src/**/*.tsx'",
+    "prettier:fix:ts": "pnpm prettier --write 'src/**/*.ts'",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@avnu/avnu-sdk": "^2.0.0",
-    "@pinata/sdk": "^2.1.0",
-    "ethers": "^6.13.1",
-    "framer-motion": "^11.2.4",
-    "next": "^14.2.3",
-    "nostr-tools": "^2.7.0",
-    "qs": "^6.12.3",
-    "starknet": "6.9.0",
-    "zod": "^3.23.8",
-    "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme-tools": "^2.1.2",
     "@nostr-dev-kit/ndk": "^2.8.2",
-    "common":"workspace:*",
-    "pixel_ui":"workspace:*",
+    "@pinata/sdk": "^2.1.0",
+    "@rainbow-me/rainbowkit": "^2.1.5",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
+    "@tanstack/react-query": "^5.40.0",
+    "common": "workspace:*",
+    "d3": "^7.9.0",
+    "ethers": "^6.13.1",
+    "framer-motion": "^11.2.4",
     "get-starknet-core": "^3.3.0",
+    "js-sha256": "^0.11.0",
+    "next": "^14.2.3",
+    "nostr-tools": "^2.7.0",
+    "pixel_ui": "workspace:*",
+    "qs": "^6.12.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
-    "js-sha256": "^0.11.0",
-    "d3": "^7.9.0"
-
-
-
+    "starknet": "6.9.0",
+    "viem": "~2.21.2",
+    "wagmi": "^2.12.8",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
