hooks cashu + permissions + index register

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -22,7 +22,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.test_afk"
+      "package": "com.test_afk",
+      "permissions":["android.permission.WRITE_EXTERNAL_STORAGE"]
     },
     "web": {
       "favicon": "./assets/favicon.png",
