--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -60,6 +60,7 @@
     "expo-linking": "~6.3.1",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
