--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -86,7 +86,7 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.10.5",
+    "react-native-webview": "~13.6.3",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
