feat: start fastify migration

--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -12,20 +12,23 @@
     "start:prod": "ts-node dist/index.js",
     "start:node": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma:generate":"npx prisma generate",
-    "prisma:push":"npx prisma db push",
-    "prisma:setup":"npx prisma generate && npx prisma db push"
+    "prisma:generate": "npx prisma generate",
+    "prisma:push": "npx prisma db push",
+    "prisma:setup": "npx prisma generate && npx prisma db push"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.18.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fastify": "^4.28.1",
+    "fastify-plugin": "^4.5.1",
     "graphql": "^16.9.0",
     "helmet": "^7.1.0",
     "indexer-prisma": "workspace:*",
