--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -26,7 +26,6 @@
     "apollo-server": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
     "graphql": "^16.9.0",
@@ -40,6 +39,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.16.1",
+    "fastify": "^4.28.1",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
