--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -60,6 +60,7 @@
     "expo-linking": "~6.3.1",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
@@ -85,7 +86,7 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.10.5",
+    "react-native-webview": "~13.6.3",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
