--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@cashu/cashu-ts": "^1.0.1",
+    "@getalby/lightning-tools": "^5.0.3",
+    "@getalby/sdk": "^3.6.1",
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
     "@nostr-dev-kit/ndk": "^2.8.2",
+    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
     "@tanstack/react-query": "^5.40.0",
+    "@webbtc/webln-types": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
