--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -32,6 +32,7 @@
   },
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.8.2",
+    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
