--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -29,6 +29,8 @@
     "@getalby/sdk": "^3.6.1",
     "@noble/curves": "^1.4.0",
     "@nostr-dev-kit/ndk": "^2.8.2",
+    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
+    "@rainbow-me/rainbowkit": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
@@ -91,6 +93,8 @@
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
     "text-encoding": "^0.7.0",
+    "viem": "2.x",
+    "wagmi": "^2.12.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
