--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -31,7 +31,7 @@
     "@nostr-dev-kit/ndk": "^2.8.2",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -39,21 +39,26 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@reown/appkit-auth-wagmi-react-native": "1.0.0",
+    "@reown/appkit-siwe-react-native": "^1.0.0",
+    "@reown/appkit-wagmi-react-native": "^1.0.0",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
     "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query-persist-client": "5.40.0",
     "@uniswap/sdk-core": "^5.3.1",
-    "@walletconnect/react-native-compat": "^2.13.3",
+    "@walletconnect/react-native-compat": "2.16.1",
     "@webbtc/webln-types": "^2.1.0",
     "afk_nostr_sdk": "workspace:*",
     "axios": "^1.7.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "buffer": "^6.0.3",
     "common": "workspace:*",
     "crypto-es": "^2.1.0",
     "events": "^3.3.0",
-    "expo": "~51.0.17",
+    "expo": "~51.0.28",
     "expo-application": "^5.9.1",
     "expo-clipboard": "~6.0.3",
     "expo-crypto": "~13.0.2",
@@ -67,8 +72,10 @@
     "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
     "get-starknet-core": "^3.3.0",
+    "install": "^0.13.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
     "react": "18.3.1",
@@ -77,6 +84,7 @@
     "react-native-gesture-handler": "2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.3.0",
     "react-native-portalize": "^1.0.7",
