--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "@avnu/avnu-sdk": "^2.0.0",
+    "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.1.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@nostr-dev-kit/ndk": "^2.8.2",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
@@ -29,7 +32,7 @@
     "common": "workspace:*",
     "d3": "^7.9.0",
     "ethers": "^6.13.1",
-    "framer-motion": "^11.2.4",
+    "framer-motion": "^11.3.28",
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
     "next": "^14.2.3",
