--- a/turbo.json
+++ b/turbo.json
@@ -22,7 +22,9 @@
     "TELEGRAM_MOBILE_APP",
     "EXPO_PUBLIC_PIXEL_URL",
     "NEXT_PUBLIC_BACKEND_URL",
-    "NEXT_PUBLIC_NODE_ENV"
+    "NEXT_PUBLIC_NODE_ENV",
+    "NEXT_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS"
   ],
   "pipeline": {
     "build": {
