fix account login

--- a/turbo.json
+++ b/turbo.json
@@ -24,7 +24,9 @@
     "NEXT_PUBLIC_BACKEND_URL",
     "NEXT_PUBLIC_NODE_ENV",
     "NEXT_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
-    "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS"
+    "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_CHAIN_ID",
+    "NEXT_PUBLIC_PROVIDER_URL"
   ],
   "pipeline": {
     "build": {
