--- a/.github/workflows/starknet-contracts.yml
+++ b/.github/workflows/starknet-contracts.yml
@@ -19,7 +19,7 @@ jobs:
         run: scarb fmt --check
         working-directory: onchain/cairo
       - name: Build cairo programs
-        run: scarb build --verbose || (echo "Build failed"; exit 1)
+        run: scarb build
         working-directory: onchain/cairo
   tests:
     runs-on: ubuntu-latest
@@ -36,5 +36,5 @@ jobs:
         with:
           starknet-foundry-version: '0.25.0'
       - name: Run cairo tests
-        run: snforge test --verbose || (echo "Tests failed"; exit 1)
+        run: snforge test
         working-directory: onchain/cairo
