add missing quotation

--- a/.github/workflows/config/typos.toml
+++ b/.github/workflows/config/typos.toml
@@ -2,4 +2,4 @@
 ba = "ba"
 
 [files]
-extend-exclude = ["/**/patches/**", "/**/assets/**", /**/src/config/**, "**/*.config.json"]
+extend-exclude = ["/**/patches/**", "/**/assets/**", "/**/src/config/**", "**/*.config.json"]
