--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -21,7 +21,7 @@
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
-    "@nostr-dev-kit/ndk": "^2.10.0",
+    "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
     "@tanstack/react-query": "^5.40.0",
@@ -31,7 +31,6 @@
     "zustand": "^4.5.2"
   },
   "peerDependencies": {
-    "@nostr-dev-kit/ndk": "^2.10.0",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
     "react": "^18.3.1",
@@ -50,7 +49,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@nostr-dev-kit/ndk": "^2.10.0",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
     "@types/react": "^18.3.1",
