--- a/scripts/package.json
+++ b/scripts/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@noble/secp256k1": "^1.7.1",
-    "@nostr-dev-kit/ndk": "^2.10.0",
+    "@nostr-dev-kit/ndk": "2.10.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
