--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@funkit/api-base": "^1.1.2",
     "@prisma/client": "^5.18.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
