--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -1,16 +1,16 @@
-name: CI
+name: Web App
 
 on:
   push:
     branches:
       - main
     paths:
-      - "apps/mobile/**"
+      - "apps/website/**"
   pull_request:
     branches:
       - main
     paths:
-      - "apps/mobile/**"
+      - "apps/website/**"
 
 jobs:
   check-app:
@@ -18,7 +18,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./apps/mobile
+        working-directory: ./apps/website
 
     steps:
       - name: Checkout Code
@@ -48,14 +48,14 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          if [ -f "apps/mobile/pnpm-lock.yaml" ]; then
+          if [ -f "apps/website/pnpm-lock.yaml" ]; then
             pnpm install --frozen-lockfile
           else
             pnpm install
           fi
 
       - name: Prettier Format Check
-        run: pnpm format:check
+        run: pnpm prettier:check
 
       - name: ESLint Check
         run: pnpm lint
