--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -10,9 +10,9 @@
     "build:nostr_sdk": "cd ../.. && pnpm run build:nostr_sdk",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prettier:fix": "pnpm prettier --write 'src/**/*.tsx'",
-    "prettier:fix:ts": "pnpm prettier --write 'src/**/*.ts'",
-    "check-types": "tsc --noEmit"
+    "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "ts:check": "tsc --noEmit"
   },
   "dependencies": {
     "@avnu/avnu-sdk": "^2.0.0",
