add cicd workflows

--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "format:check": "prettier -c \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:strict": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
-    "lint:fix": "yarn lint --fix",
+    "lint:fix": "eslint --fix \"src/**/*.{ts,tsx}\"",
     "ts:check": "tsc --noEmit",
     "check:all": "yarn check && yarn format:check && yarn lint && yarn ts:check",
     "check:all-strict": "yarn check && yarn format:check && yarn lint:strict && yarn ts:check"
