start fix tsconfig and package

--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -28,7 +28,9 @@
       "@/*": [
         "./src/*"
       ],
-      "pixel_ui": ["../../packages/pixel_ui/src"]
+      "pixel_ui": ["../../packages/pixel_ui/src"],
+      "common": ["../../packages/common/src"],
+      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
     },
     "noEmit": true
   },
