--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -47,7 +47,10 @@
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "starknetkit-next": "npm:starknetkit@2.3.0",
+    "afk_nostr_sdk": "workspace:*"
+
   },
   "devDependencies": {
     "@types/node": "^20",
