--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -3,7 +3,7 @@ EXPO_PUBLIC_PROVIDER_URL="https://starknet-sepolia.g.alchemy.com/starknet/versio
 
 EXPO_PUBLIC_BACKEND_URL="http://localhost:3000/api"
 
-EXPO_PUBLIC_WC_ID="your_wallet_connect_project_id"
+EXPO_PUBLIC_WC_ID=""
 EXPO_NODE_ENV="development"
 EXPO_PUBLIC_NODE_ENV="development"
 EXPO_PUBLIC_INDEXER_BACKEND_URL=""
