fix launchpad + backend + screen linking

--- a/turbo.json
+++ b/turbo.json
@@ -26,7 +26,8 @@
     "NEXT_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CHAIN_ID",
-    "NEXT_PUBLIC_PROVIDER_URL"
+    "NEXT_PUBLIC_PROVIDER_URL",
+    "EXPO_PUBLIC_INDEXER_BACKEND_URL"
   ],
   "pipeline": {
     "build": {
