feat: Funkit backend onramp/offramp (#141)
* feat: add database models for onramp/offramp

* feat: add create_funkit_stripe_checkout enpoint

* refac: modify db schema

* chore: update funkit deps

* chore: clean code

* fix: fix dynamic import issue

* feat: create get_funkit_stripe_checkout_quote endpoint

* refac: use env variable for api key

* feat: add get-funkit-stripe-checkout-quote endpoint to router

* feat: create get_funkit_stripe_checkout_status endpoint

* feat: modify db schema

* fix: fix indexer token address

* fix: fix token launch token address

--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@funkit/api-base": "^1.2.0",
     "@prisma/client": "^5.18.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
