try reown version fix canary

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -43,9 +43,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@reown/appkit-auth-wagmi-react-native": "1.0.0",
-    "@reown/appkit-siwe-react-native": "^1.0.0",
-    "@reown/appkit-wagmi-react-native": "^1.0.0",
+    "@reown/appkit-auth-wagmi-react-native": "0.0.0-canary-20241004192634",
+    "@reown/appkit-siwe-react-native": "0.0.0-canary-20241004192634",
+    "@reown/appkit-wagmi-react-native": "0.0.0-canary-20241004192634",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
