fix pwa + mobile + start fix mobile

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -17,3 +17,5 @@ REACT_APP_CANVAS_NFT_CONTRACT_ADDRESS=
 REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
 REACT_APP_NODE_ENV=
 
+EXPO_PUBLIC_DYNAMIC_API_KEY="DYNAMIC_API_KEY"
+
