--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -27,6 +27,8 @@
     "@cashu/cashu-ts": "^1.0.1",
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
+    "@dynamic-labs/ethereum": "^3.2.0",
+    "@dynamic-labs/sdk-react-core": "^3.2.0",
     "@expo/metro-runtime": "~3.2.1",
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
@@ -125,9 +127,6 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.3.3",
     "typescript": "~5.3.3"
-  },
-  "patchedDependencies": {
-    "@reown/appkit-siwe-react-native@1.0.0": "patches/@reown__appkit-siwe-react-native@1.0.0.patch"
   },
   "private": true
 }
