--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,8 @@
     "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CHAIN_ID",
     "NEXT_PUBLIC_PROVIDER_URL",
-    "EXPO_PUBLIC_INDEXER_BACKEND_URL"
+    "EXPO_PUBLIC_INDEXER_BACKEND_URL",
+    "EXPO_PUBLIC_DYNAMIC_API_KEY"
   ],
   "pipeline": {
     "build": {
