fix and enhance

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -64,11 +64,15 @@
     "events": "^3.3.0",
     "expo": "~51.0.28",
     "expo-application": "^5.9.1",
+    "expo-camera": "^15.0.16",
     "expo-clipboard": "~6.0.3",
+    "expo-constants": "^16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-device": "^6.0.2",
     "expo-font": "^12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "^0.28.18",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.4",
     "expo-sqlite": "^14.0.6",
