--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -27,6 +27,8 @@
     "@cashu/cashu-ts": "^1.0.1",
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
+    "@dynamic-labs/client": "4.0.0-alpha.8",
+    "@dynamic-labs/react-native-extension": "4.0.0-alpha.8",
     "@expo/metro-runtime": "~3.2.1",
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
@@ -64,6 +66,7 @@
     "events": "^3.3.0",
     "expo": "~51.0.28",
     "expo-application": "^5.9.1",
+    "expo-auth-session": "^5.5.2",
     "expo-camera": "^15.0.16",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.2",
@@ -77,6 +80,7 @@
     "expo-splash-screen": "~0.27.4",
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "^13.0.3",
     "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
     "get-starknet-core": "^3.3.0",
@@ -95,6 +99,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.3.0",
+    "react-native-passkey": "2.1.1",
     "react-native-portalize": "^1.0.7",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
@@ -103,8 +108,9 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "~13.6.3",
+    "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
