--- a/turbo.json
+++ b/turbo.json
@@ -28,7 +28,15 @@
     "NEXT_PUBLIC_CHAIN_ID",
     "NEXT_PUBLIC_PROVIDER_URL",
     "EXPO_PUBLIC_INDEXER_BACKEND_URL",
-    "EXPO_PUBLIC_DYNAMIC_API_KEY"
+    "EXPO_PUBLIC_DYNAMIC_API_KEY",
+    "TWILIO_ACCOUNT_SSID",
+    "TWILIO_AUTH_TOKEN",
+    "TWILIO_SERVICE_ID",
+    "DEPLOYER_ADDRESS",
+    "DEPLOYER_PK",
+    "RPC_NODE_API_KEY",
+    "JWT_SECRET"
+
   ],
   "pipeline": {
     "build": {
