dynamic screen for evm onboarding with oauth or otp

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -28,7 +28,9 @@
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
     "@dynamic-labs/client": "4.0.0-alpha.8",
+    "@dynamic-labs/react-hooks": "4.0.0-alpha.8",
     "@dynamic-labs/react-native-extension": "4.0.0-alpha.8",
+    "@dynamic-labs/viem-extension": "4.0.0-alpha.8",
     "@expo/metro-runtime": "~3.2.1",
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
