--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -67,6 +67,7 @@
     "expo": "~51.0.28",
     "expo-application": "^5.9.1",
     "expo-auth-session": "^5.5.2",
+    "expo-av": "~14.0.7",
     "expo-camera": "^15.0.16",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.2",
