--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -28,7 +28,10 @@
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
     "@dynamic-labs/client": "4.0.0-alpha.8",
+    "@dynamic-labs/react-hooks": "4.0.0-alpha.8",
     "@dynamic-labs/react-native-extension": "4.0.0-alpha.8",
+    "@dynamic-labs/utils": "^3.3.0",
+    "@dynamic-labs/viem-extension": "4.0.0-alpha.8",
     "@expo/metro-runtime": "~3.2.1",
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
@@ -45,9 +48,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@reown/appkit-auth-wagmi-react-native": "0.0.0-canary-20241004192634",
-    "@reown/appkit-siwe-react-native": "0.0.0-canary-20241004192634",
-    "@reown/appkit-wagmi-react-native": "0.0.0-canary-20241004192634",
+    "@reown/appkit-auth-wagmi-react-native": "1.0.1",
+    "@reown/appkit-siwe-react-native": "1.0.1",
+    "@reown/appkit-wagmi-react-native": "1.0.1",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
