passkey manager + bridge layerswap

--- a/turbo.json
+++ b/turbo.json
@@ -35,7 +35,9 @@
     "DEPLOYER_ADDRESS",
     "DEPLOYER_PK",
     "RPC_NODE_API_KEY",
-    "JWT_SECRET"
+    "JWT_SECRET",
+    "EXPO_PUBLIC_LAYERSWAP_CLIENT_ID",
+    "EXPO_PUBLIC_LAYERSWAP_API_KEY"
 
   ],
   "pipeline": {
