--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -19,3 +19,5 @@ REACT_APP_NODE_ENV=
 
 EXPO_PUBLIC_DYNAMIC_API_KEY="DYNAMIC_API_KEY"
 
+EXPO_PUBLIC_LAYERSWAP_CLIENT_ID=""
+EXPO_PUBLIC_LAYERSWAP_API_KEY="API_KEY_LAYER_SWAP"
