add web analytics

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -21,3 +21,5 @@ EXPO_PUBLIC_DYNAMIC_API_KEY="DYNAMIC_API_KEY"
 
 EXPO_PUBLIC_LAYERSWAP_CLIENT_ID=""
 EXPO_PUBLIC_LAYERSWAP_API_KEY="API_KEY_LAYER_SWAP"
+
+EXPO_PUBLIC_GOOGLE_TAG_ID=
