--- a/turbo.json
+++ b/turbo.json
@@ -37,7 +37,8 @@
     "RPC_NODE_API_KEY",
     "JWT_SECRET",
     "EXPO_PUBLIC_LAYERSWAP_CLIENT_ID",
-    "EXPO_PUBLIC_LAYERSWAP_API_KEY"
+    "EXPO_PUBLIC_LAYERSWAP_API_KEY",
+    "EXPO_PUBLIC_GOOGLE_TAG_ID"
 
   ],
   "pipeline": {
