--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,9 @@
     "JWT_SECRET",
     "EXPO_PUBLIC_LAYERSWAP_CLIENT_ID",
     "EXPO_PUBLIC_LAYERSWAP_API_KEY",
-    "EXPO_PUBLIC_GOOGLE_TAG_ID"
+    "EXPO_PUBLIC_GOOGLE_TAG_ID",
+    "EXPO_PUBLIC_MERCHANT_ID_APPLE",
+    "STRIPE_SERVER_API_KEY"
 
   ],
   "pipeline": {
