add preserveSymLinks + undo stripe mobile issue react native version

--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -20,6 +20,7 @@
     "jsx": "preserve",
     "incremental": true,
     "noImplicitAny": false,
+    "preserveSymlinks": true,
     "plugins": [
       {
         "name": "next"
