--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -49,8 +49,7 @@
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
-    "starknetkit-next": "npm:starknetkit@2.3.0",
-    "afk_nostr_sdk": "workspace:*"
+    "starknetkit-next": "npm:starknetkit@2.3.0"
 
   },
   "devDependencies": {
