add resources pixel in pwa

--- a/apps/pwa/public/manifest.json
+++ b/apps/pwa/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "AFK Community",
+  "short_name": "AFK Community PWA",
   "name": "Aligned Fam Kernel Community",
   "icons": [
     {
