add GA pwa and landing

--- a/apps/pwa/.env.example
+++ b/apps/pwa/.env.example
@@ -13,3 +13,4 @@ REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
 REACT_APP_CANVAS_NFT_CONTRACT_ADDRESS=
 REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
 REACT_APP_NODE_ENV=
+NEXT_PUBLIC_GOOGLE_ANALYTICS=
