--- a/turbo.json
+++ b/turbo.json
@@ -40,7 +40,8 @@
     "EXPO_PUBLIC_LAYERSWAP_API_KEY",
     "EXPO_PUBLIC_GOOGLE_TAG_ID",
     "EXPO_PUBLIC_MERCHANT_ID_APPLE",
-    "STRIPE_SERVER_API_KEY"
+    "STRIPE_SERVER_API_KEY",
+    "NEXT_PUBLIC_GOOGLE_ANALYTICS"
 
   ],
   "pipeline": {
