--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -19,6 +19,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noImplicitAny": false,
     "plugins": [
       {
         "name": "next"
@@ -29,8 +30,7 @@
         "./src/*"
       ],
       "pixel_ui": ["../../packages/pixel_ui/src"],
-      "common": ["../../packages/common/src"],
-      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
+      "common": ["../../packages/common/src"]
     },
     "noEmit": true
   },
