--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -21,7 +21,8 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@nostr-dev-kit/ndk": "2.10.0",
+    "@nostr-dev-kit/ndk": "2.10.1",
+    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@starknet-react/chains": "^0.1.7",
@@ -49,7 +50,7 @@
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
     "starknetkit-next": "npm:starknetkit@2.3.0",
-    "afk_nostr_sdk": "workspace:*"
+    "@argent/x-sessions": "^6.7.4"
 
   },
   "devDependencies": {
